--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>Master of Nineray.com</title>
 </head>
 <body>
-    <h1>这是我的第一个测试网页：Master of Nineray!</h1>
+    <h1>这是一个测试网页!</h1>
+    <h1>Hello Nineray</h1>
     <p>Hello World!</p>
 </body>
 </html>
